# rpg_forum_analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  CONVENTIONS.md  ConsoleUI.py  ConversationNode.py  ForumProcessor.py  README.md  conversation_node.py  forum_scraper.py  hello.py  mypy.ini  pyproject.toml  rpg_forum_analyzer.py
core/: ContentType.py  PostData.py
list/: .gitignore
processing/: LLMData.py  content_classifier.py
scrapers/: ForumScraper.py  ForumScraperFactory.py  RedditScraper.py  StackExchangeScraper.py  forum_scraper.py
tests/: content_classifier_test.py  reddit_scrapers_test.py  stack_exchange_scrapers_test.py
utils/: config_loader.py
