[project]
name = "rpg-forum-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.8.1",
    "rich>=13.9.4",
    "stackapi>=0.3.1",
    "typer>=0.15.1",
    "python-dotenv>=1.0.0",
    "pytest>=8.3.4",
    "langchain>=0.3.17",
    "langchain-openai>=0.3.4",
    "black>=25.1.0",
    "langchain-ollama>=0.2.3",
]
